fix RandomScheduler: do not mutate messages from non-faulty replicas